fixed css issue with content spilling from grids

--- a/client/src/App/Styles/styles.css
+++ b/client/src/App/Styles/styles.css
@@ -35,17 +35,19 @@
 }
 .ProductOverviewContainer {
   grid-area: 2 / 1 / 3 / 2;
+  /* display: inline-block;
+  max-width: 100%; */
 }
-.div3 {
+.RelatedContainer {
   grid-area: 3 / 1 / 4 / 2;
 }
-.div4 {
+.QAContainer {
   grid-area: 4 / 1 / 5 / 2;
 }
-.div5 {
+.ReviewsContainer {
   grid-area: 5 / 1 / 6 / 2;
 }
-.div6 {
+.FooterContainer {
   grid-area: 6 / 1 / 7 / 2;
 }
 /* WHOLE APP */
@@ -62,75 +64,89 @@
 
 /* Product overview main compoent*/
 .ProductOverviewContainer {
+  
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: repeat(9, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+  max-width: 100%;
 }
 /* MainImageGalleryContainer PARENT ///////////////*/
 
 .MainImageGalleryContainer {
   grid-area: 1 / 1 / 8 / 2;
 }
+
 .MainImageGalleryContainer {
-  max-width: 100%;
 
   display: grid;
   grid-template-columns: 3fr 2fr 11fr 2fr 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+
 }
+/*
 .thumbnail_url_container {
   grid-area: 1 / 1 / 2 / 2;
 }
 .LeftArrow {
-  grid-area: 1 / 2 / 2 / 3;
-}
-.MainImg {
-  grid-area: 1 / 3 / 2 / 4;
+  grid-area: 1 / 2 / 2 / 3; */
+/* } */
+/* .MainImg {
+  grid-area: 1 / 3 / 2 / 4; */
 
-  /* padding-left: 8%;
+/* padding-left: 8%;
   padding-right: 8%; */
-}
-.ExpandButton {
+/* } */
+/* .ExpandButton {
   grid-area: 1 / 4 / 2 / 5;
 }
 .RightArrow {
   grid-area: 1 / 5 / 2 / 6;
-}
+} */
 
-/* MainImageGalleryContainer PARENT ///////////////*/
+/*END OF MainImageGalleryContainer PARENT ///////////////*/
 
-.div2 {
+.LinkReviewsContainer {
   grid-area: 1 / 2 / 2 / 3;
 }
-.div3 {
+
+.StyleNameContainer {
   grid-area: 2 / 2 / 3 / 3;
 }
-.div4 {
+
+.PriceContainer {
   grid-area: 3 / 2 / 4 / 3;
 }
-.div5 {
+
+.ThumbnailStyleSelectorContainer {
   grid-area: 4 / 2 / 6 / 3;
 }
-.div6 {
+
+.SelectSizeContainer {
   grid-area: 6 / 2 / 7 / 3;
 }
-.div7 {
+.AddToCartContainer {
   grid-area: 7 / 2 / 8 / 3;
 }
-.div8 {
+.StyleInfoContainer {
   grid-area: 8 / 1 / 10 / 3;
-}
+} 
 
 .MainThumbNails {
   /* width: 80px;
   height: 80px; */
+  max-width: 100%;
 }
+/* 
+*/
+/* .MainGalleryThumbNail {
+} */
 
-.MainGalleryThumbNail {
+.MainImg {
+  max-width: 100%;
 }
 
 /* Product overview main compoent*/
